@@ -28,6 +28,7 @@
 - [#487] True dart point always goes to origin when the label is moved.
 - [#128] New Tool: Slash and Spread.
 - [#409] New feature: Export measurement file to Excel .csv.
+- [#180] New feature: Search field in tape app and dialog Increments.
 
 # Version 0.4.5
 - [#435] Valentina doesn't change the cursor.
